ClientFiles/css/IDEOnline.css
/*Bit of info I always forget:
    margin -space outside the box
    padding - space inside the box
    order is clockwise -top, right, bot, left
*/
#wrapper {
    padding: 100px;
	width: 80%;
    position: relative;
}

/*toolbar*/
.toolbar {
    border: 1px solid #0b175c;
    position: fixed;
    top: 80%;
    left: 60%;
    min-width: 750px;
    background-color: #fff;
    z-index: 2;
    user-select: none;
    -moz-user-select: none;
}
#toolbarHeader {
    padding: 0;
    margin: 0;
    text-align:center;
}
.toolbarBtn, #toolbarLoggingArea, #toolbarMicroserviceStatusArea, #toolbarFunctionsArea, #toolbar_LoginInfo {
    margin: 20px;
}
#toolbar_LoginInfo{
    color: #249627;
}
#displayedAvatar {
    left:-50px;
    display:none;
}

/*file tabs*/
.tabs {
    height: 45px;
    width: 93%;
    padding: 0 0 0 0;
    user-select: none;
    -moz-user-select: none;
}

.tab {
    width: 130px;
    height: 45px;
    text-align: center;
    overflow: hidden;
    float: left;
    margin: 0 -15px 0 0;
}


.inner-tab {
    height: 47px;
    background: #fff;
    border-radius: 4px;
    border: 1px solid;
    overflow: hidden;
    margin: 0 10px 0 10px;
}

.tab.activeTab {
    z-index: 2;
    position: relative;
    padding-bottom: 1px;
}

#closeButton {
    color: #808080;
    background: #fff;
    top: 0;
    right: 0;
    border: none;
    float:right;
}
#closeButton:hover {
    color:#ff0000;
}

.inner-tab p {
    float: left;
    width: 79%;
}

/*Modals for Welcome and New Project screens*/
.modal-complex {
    font-size: 18px;
    font-family: Arial, Helvetica, sans-serif;
    font-weight: bolder;
    text-align: center;
    line-height:30px;
    box-sizing: border-box;
    user-select: none;
    -moz-user-select: none;
    position: absolute;
    top: 20%;
    left: 30%;
    z-index: 100;
}
.modalStretchBackground {
    background: rgba(193, 193, 193, 0.7);
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 100;
    display:none;
}
#newProjectDiag {
    background: rgba(193, 193, 193, 1);
    height: 45%;
}
/*checkboxes in new project modal*/
.valid {
    color: #249627;
}
.invalid {
    color: #781010;
}
.modal-complex h1, .modal-complex h2, .modal-complex label:not(#small-label) {
    color: #222;
    text-shadow: 0 1px 1px #555; /*params: horizontal-shadow, vertical-shadow, blur, color*/
}
.modal-complex #small-label {
    font-size: 10px;
    font-weight: normal;
    text-decoration: underline;
}
/*welcome diag*/
#welcomeDiag { /*there's less text in the header here, need to center it more to the right*/
    left: 35%;
}
.bigBtn {
    text-align: center;
    color: #171717;
    font-family: Arial, Helvetica, sans-serif;
}
.welcomeDiagBtn {
    font-size: 25px;
    margin: 30px;
}
.bigBtn:hover {
    color: #0b175c;
}
.selectProjectType, .modal-complex input, .bigBtn {
    border: 1px solid #000;
    border-radius: 10px;
    padding: 5px;
    font-weight: bold;
}
.selectProjectType:hover, .modal-complex input:hover, .bigBtn:hover {
    border-color: #000;
    box-shadow: 3px 8px 8px #888888;
}
.selectProjectType:focus, .modal-complex input:focus {
    border-color: #000;
    box-shadow: 3px 8px 8px #888888;
}
.backToWelcomeDiag {
    color: #0e4215;
}
.backToWelcomeDiag:hover {
    color: #0026ff;
    text-shadow: 0 4px 4px #555;
}
.disabledBtn {
    opacity: 0.3;
    pointer-events: none; /*disable hover effects*/
}

/*Login and Register forms*/
.loginBox {
    width: 320px;
    height: 420px;
    background: #000;
    color: #fff;
    top: 35%;
    left: 40%;
    position: absolute;
    padding: 70px 30px 70px 30px;
    box-sizing: border-box; /*when calculating width, include padding and borders*/
    user-select: none;
    -moz-user-select: none;
    z-index: 101; /*+1 higher than the layer under*/
}
    .loginBox h1 {
        margin:0;
        padding-bottom: 20px;
        text-align: center;
        font-size: 22px;
    }
    .loginBox label {
        font-weight: bold;
    }
    .loginBox input:not(#keepLoggedCheckbox) { /*input fields and buttons*/
        width: 100%;
        margin-bottom: 20px;
    }
    .loginBox .loginInputField {    /*input fields only*/
        border: none;
        border-bottom: 1px solid #fff;
        background: transparent; /*kill color in the edit box, see the background*/
        outline: none; /*An outline is a line that is drawn around elements, outside the borders, to make the element "stand out".*/
        height: 30px;
        color: #fff;
        font-size: 16px;
    }
    .loginBox .loginBoxBtn {
        border: none;
        outline: none;
        height: 30px;
        background: #808080;
        color: #fff;
        font-size: 18px;
        border-radius: 20px;
    }
    .loginBox .loginBoxBtn:hover {
        cursor: pointer;
        background: #ffc107;
        color: #000;
    }
    .loginBox span {
        text-decoration: none;
        font-size: 16px;
        line-height: 20px;
        color: dimgrey;
    }
    .loginBox span:hover {
        color: #ffc107;
    }
    #loginBox{
        display:none;
    }
    #registerBox{
        top: 35%;
        left: 40%;
        z-index:102;
        display:none;
    }
    /*Avatar picker in register form*/
    .avatar {
        width: 100px;
        height: 100px;
        border-radius: 50%; /*make round corners*/
        border:1px solid #000;
        position: absolute;
        top: -50px; /*with a height of 100px, move it half way above the container*/
        left: 100px; /*and roughly in the middle of the width of container*/
    }
    .avatar:hover:not(#displayedAvatar) {
        box-shadow: 3px 3px 8px #888888;
    }
    .loadingStretchBackground{
        background: rgba(193, 193, 193, 0.7);
        position: fixed;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        z-index: 400;
        display:none;
    }
    .loadingSymbol {
        border: 10px solid #f3f3f3;
        border-top: 10px solid #000000;
        border-radius: 50%;
        width: 30px;
        height: 30px;
        animation: spin 1s linear infinite;
        position:relative;
        top: -90%;
        left: 40%;
        z-index: 500;
        display: none;
    }
    #browseForFile {
        display: none;
    }
    #procentLabel {
        display:none;
    }
    #fileSelectorErrorMessage {
        color:#ff0000;
    }
    #registerMessageBox {
        color: #249627;
        display:none;
    }

/*Wrapper around the text editor*/
#content {
    border-top: 1px solid;
    position: relative;
    z-index: 1;
}

/*the text editor*/
.activeEditorWindow {
    min-width: 99%;
    min-height: 500px;
    line-height: normal;
    font-size: 18px;
    white-space: pre; /*set line to continue in one line instead of breaking*/
    overflow: auto;
    border-top: none;
    border-right: 1px solid;
    border-bottom: 1px solid;
    border-left: 1px solid;
    padding: 5px 0 20px 10px;
    z-index: 1;
    position: relative;
    display: block;
}
.hiddenEditorWindow {
    display: none;
}

/*vertical numbers on the left of the text editor*/
#lineNumbering {
    width:4%;
    top:0;
    left:-4%;
    border: 1px solid;
    margin-top: 5px;
    background-color: white;
    border: none;
    border-color: dimgrey;
    border-right: dotted;
    line-height: normal;
    font-size: 18px;
    text-align: right;
    color: dimgray;
    position: absolute;
}

/*solution explorer*/
#solutionWindow {
    width: 15%;
    height:50%;
    top: 50px;
    right: 30px;
    border: 1px solid;
    background-color: white;
    text-align: left;
    font-weight: bold;
    resize:both;
    overflow: auto;
    position: fixed; /*not dependant on page flow, we want it always there*/
    z-index: 50; /*higher z-index makes it cover the underlaying element with lower z*/
}
    .sectionHeader {
        padding: 1%;
        cursor: move;
        z-index: 50;
        background-color: #808080;
        color: #fff;
        user-select: none;
        -moz-user-select: none;
    }
    #solutionWindow ul, #solExplorerUL {
        list-style-type: none;
    }
    #solutionWindow #solExplorerUL {
        margin: 0;
        padding: 0;
    }
    #solutionWindow .solutionExplorerIcon {
        width: 18px;
        height: 18px;
        position: relative;
    }
    #solExplorerUL .slEIcon {
        width: 18px;
        height: 18px;
        position: relative;
        border: none;
        padding: 0;
        margin: 0;
        user-select: none;
        -moz-user-select: none;
}
    #solutionWindow .decoration {
        user-select: none;
        -moz-user-select: none;
    }
    #solutionWindow .expand {
        color: black;
        display: inline-block;
        margin-right: 6px;
        cursor: pointer;
        user-select: none;
        -moz-user-select: none;
    }
    #solutionWindow .expand-down {
        transform: rotate(90deg);
    }
    #solutionWindow .nested {
        display: none;
    }
    #solutionWindow .active {
        display: block;
    }

.solutionMenu {
    margin: 0;
    padding: 0;
    min-width: 150px;
    height: auto;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 12px;
    border: 1px solid;
    border-color: #808080;
    background-color: #ccc;
    position: absolute;
    z-index: 70;
    display: none; /*hidden until called on right click*/
}
    .solutionMenu .separatorLine {
        height: 1px;
        background-color: #808080;
        margin: 2px 0 2px 0;
        user-select: none;
        -moz-user-select: none;
    }
    .solutionMenu ul {
        margin: 0;
        padding: 0;
        list-style: none;
    }
    .solutionMenu .options {
        padding: 10px 5px 10px 5px;
        border-left: 4px solid transparent;
        cursor: pointer;
    }
    .solutionMenu .options:hover {
        background: #eee;
        border-left: 4px solid #666;
    }

#output {
	clear: both;
	width: 90%;
	height: 20%;
	padding-bottom: 50px;
	padding-top: 50px;
}

/*simple dialogue box*/
.modal-simple {
    position: absolute;
    z-index: 150;   /*this is also used to display error messages to the user, we want the highest z*/
    overflow: auto;
    display: none;
}
#modalText {
    background-color: #808080;
    color: #fff;
    user-select: none;
    float: left;
    -moz-user-select: none;
}
.modal-simple #UserOkBtn,#UserCancelBtn {
    float: left;
}
.modal-simple #UserCancelBtn {
    float: left;
}
.error {
    background-color: #808080;
    color: #000;
    user-select: none;
    -moz-user-select: none;
    animation: blinker 1s linear infinite;
    float: left;
    display: none;
}
.modalCloseBtn {
    background: #fff;
    float: right;
    font-size: 18px;
    font-weight: bold;
}
.modalCloseBtn:hover, .modalCloseBtn:focus {
    color:#ff0000;
    cursor: pointer;
}

#footer {
    clear: both;
    height: 30px;
    background-color: #000;
    color: #fff;
    text-align: center;
    padding-top: 10px;
}

@media only screen and (max-width: 300px) {
  .text {
	  font-size: 11px
	  }
}
@keyframes blinker {
    50% {
        opacity: 0.5;
    }
}
@keyframes spin {
    0% {
        transform: rotate(0deg);
    }

    100% {
        transform: rotate(360deg);
    }
}

